# summix_py

./: HA-package-data.csv  HA-package-data.txt  LICENSE  README.md  environment.yml  example_notebook.ipynb  setup.cfg  setup.py  summix.py
summix/: adj_af.py  summix.py
usage-example/: example_notebook.ipynb
