[metadata]
name = summix_py
version = 0.0.1
url = https://github.com/jordanrhall/summix_py
author = Jordan R. Hall
author_email = jordanroberthall@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = efficiently solves ancestral deconvolution problems
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6
